--- a/AUPSUP_HTML5_CONTO_LAV/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_CONTO_LAV/webapp/i18n/i18n_it.properties
@@ -1,290 +1,16 @@
 title=Giacenze Conto Lavorista
 appTitle=Giacenze Conto Lavorista
 appDescription=
-
-supplierOrdersHeader = Testata Piani di Consegna Fornitore
-address = Indirizzo 
-officePhone = Telefono Ufficio
-email = Email
-orders = Ordini
-orderNumber = Numero d\u00B4ordine
-PtConditionCode = Cond.Pagamento
-paymentConditionDescr = Descr.cond.Pagamento
-supplier = Fornitore
-supplierDescr = Descr.Fornitore
-gruppoAcquisti = Gruppo Acq.
-
-orderPositionViewTitle = Posizione Ordini
-orderPosition = Posizione
-positions = Posizioni
-materialCode = Codice Materiale
-materialDescr = Descr.Materiale
-quant = Quantit\u00E0
-searchOrders = Ricerca Ordini
-
-correctConfirmPositions = Posizioni elaborate correttamente
-positionNotConfirmable = Posizioni {0} non sono confermate
-allPositionNotConfirmable = Tutte le posizioni degli ordini selezionate non possono essere confermate
  
-#MESSAGES:
-noOrderFound = Non sono stati trovati Ordini
- 
-#XBCB: 
-postalCode=Codice postale
- 
-#XTXT: 
-supplierCode=Codice Fornitore
- 
-#XTXT: 
-supplierName=Nome Fornitore
- 
-#XTXT: 
-city=Citt\u00E0
- 
-#XTXT: 
-purchaseOrganization=Organizzazione acquisti
- 
-#XBUT: 
-search=Cerca
- 
-#XFLD: 
-company=Societ\u00E0
- 
-#XTXT: 
-schedules=Schedulazioni
- 
-#XTXT: 
-confirmations=Conferme
- 
-#XFLD: 
-homePhone=Telefono di casa
- 
-#XTXT: 
-ZTERM=Condizioni di Pagamento
- 
-#XTXT: 
-VTEXT=Def. cond. pagamento
- 
-#XTXT: 
-LIFNR=Fornitore
- 
-#XTXT: 
-WAERS=Divisa
- 
-#XTXT: 
-EKGRP=Gruppo acquisti
-
- 
-#XTXT: 
-EKNAM=Def. gruppo acq.
- 
-#XTXT: 
-EKTEL=Telefono gr. acq.
- 
-#XTXT: 
-SMTP_ADDR=Indirizzo Email
- 
-#XTXT: 
-GWLDT=Data garanzia
- 
-#XTXT: 
-AUSNR=N. estratto conto
- 
-#XTXT: 
-ANGNR=N.Offerta
- 
-#XTXT: 
-ZBD1T=Giorni di sconto 1
- 
-#XTXT: 
-ZBD2T=Giorni di sconto 2
- 
-#XTXT: 
-ZBD3T=Giorni di sconto 3
- 
-#XTXT: 
-ZBD1P=Percentuale di sconto 1
- 
-#XTXT: 
-ZBD2P=Percentuale di sconto 2
- 
-#XTXT: 
-INCO1=Incoterms (part 1)
- 
-#XTXT: 
-INCO2=Incoterms (part 2)
- 
-#XTXT: 
-MEINS=Unit\u00E0 di misura
- 
-#XTXT: 
-NETPR=Prezzo netto
- 
-#XTXT: 
-PEINH=Unit\u00E0 di prezzo
- 
-#XTXT: 
-BPRME=UM prz.ord.acq.
- 
-#XTXT: 
-BPUMZ=Conversione da UM prz. ORDACQ in UMO
- 
-#XTXT: 
-BPUMN=Conversione da UM prz. ORDACQ in UM ORDACQ
- 
-#XTXT: 
-UMREZ=Contatore per la conversione in unit\u00E0 di mis. di base
- 
-#XTXT: 
-UMREN=Denom. per la conversione in unit\u00E0 di misura di base
- 
-#XTXT: 
-SCHPR=Prezzo stimato
- 
-#XTXT: 
-KANBA=Tipo di approvvigionamento
- 
-#XTXT: 
-BSTAE=Contr. conferma
- 
-#XTXT: 
-MAHNZ=N. solleciti
- 
-#XTXT: 
-MAHN1=1. sollecito
- 
-#XTXT: 
-MAHN2=2. sollecito
- 
-#XTXT: 
-MAHN3=3. sollecito
- 
-#XTXT: 
-UEBTO=Tolleranza cons. in eccesso
- 
-#XTXT: 
-UEBTK=Consegna in eccesso illimitata
- 
-#XTXT: 
-UNTTO=Tolleranza consegna in difetto
- 
-#XTXT: 
-PSTYP=Tipo posizione
- 
-#XTXT: 
-KNTTP=Categoria di contabilizzazione
- 
-#XTXT: 
-RETPO=Pos. resi
- 
-#XTXT: 
-KZABS=Obbligo conf.ordine
- 
-#XTXT: 
-LABNR=Conferma ordine
- 
-#XTXT: 
-KONNR=Num. contratto superiore
- 
-#XTXT: 
-KTPNR=Num. pos. contratto superiore
- 
-#XTXT: 
-ABDAT=Data concord num. progressivo concord
- 
-#XTXT: 
-ABFTZ=Quantit\u00E0 accumulata concordata
- 
-#XTXT: 
-ETFZ1=Primo periodo fisso
- 
-#XTXT: 
-ETFZ2=Secondo periodo fisso
- 
-#XTXT: 
-BSTYP=Categoria documento acquisti
- 
-#XTXT: 
-ZGTYP=Categoria certificata
- 
-#XTXT: 
-EAN11=Codice europeo articoli (EAN)
- 
-#XTXT: 
-MFRPN=Cod. componente del costruttore
- 
-#XTXT: 
-MFRNR=Num Produttore
- 
-#XTXT: 
-EMNFR=Nome usato dal costruttore
- 
-#XTXT: 
-MATNR=Materiale
- 
-#XTXT: 
-TXZ01=Descrizione Breve
- 
-#XTXT: 
-WERKS=Divisione
- 
-#XTXT: 
-IDNLF=Codice mat. fornitore
- 
-#XTXT: 
-ETENR=Num. schedulazione
- 
-#XTXT: 
-EINDT=Data consegna
- 
-#XTXT: 
-LPEIN=Categoria data di consegna
- 
-#XTXT: 
-MENGE=Quantit\u00E0
- 
-#XTXT: 
-WEMNG=Quantit\u00E0 entrata merci
- 
-#XTXT: 
-MNG02=Quantit\u00E0 confermata
- 
 #XTXT: 
-loading=Caricamento in corso
+LIFNR=Codice Fornitore
  
 #XTXT: 
 EBELN=Doc. d\u00B4acquisto
- 
+
 #XTXT: 
-ETENS=Num. conferma Fornitore
- 
-#XTXT: 
-EBTYP=Categoria di Conferma
- 
-#XTXT: 
-UZEIT=Ora
- 
-#XTXT: 
-DABMG=Qt\u00E0 ridotta
- 
-#XTXT: 
-ESTKZ=Codice creazione
- 
-#XTXT: 
-KZDIS=Rilev. per MRP
- 
-#XTXT: 
-XBLNR=Riferimento
- 
-#XTXT: 
-MPROF=Prof. compon. ass. costr.
- 
-#XTXT: 
-EMATN=Informazione Materiale
- 
-#XBUT: 
-Confirm=Conferma
- 
+MEINS=UdM
+
 #XMSG: 
 ERR_Selection_Row=Seleziona una o più posizioni.
 ERR_Confirm_Position_Text =Il numero del documento di riferimento è obbligatorio
@@ -307,26 +33,6 @@ OK_Position_confirm=Nessun errore riscontrato per la posizione.
 Title_CatConf = Selezionare la Categoria Conferma
 WRR_No_CatConf = Nessuna schedulazione inserita
 Legend=Legenda
-#XTXT: 
-confirmationType=Tipo Conferma
- 
-#XBUT: 
-close=Chiudi
- 
-#XCOL: 
-date=Data
- 
-#XCOL: 
-quantity=Quantit\u00E0
- 
-#XBUT: 
-confirmAndClose=Conferma e Chiudi
- 
-#XTXT: 
-orderConfirmation=AB - Conferma del destinatario dell\u00B4ordine
- 
-#XTXT: 
-TOT=Totale
  
 #XTXT: 
 EBELP=Posizione
@@ -335,61 +41,40 @@ EBELP=Posizione
 SYSID=System ID
 
 #XTXT: 
-noData=Nessun dato trovato
- 
-#XFLD: 
-iva=P.Iva
- 
-#XTXT: 
-titleSuppliers=Ricerca Fornitori associati
- 
-#YTXT: 
-positionConfirmation=Conferma Posizione
- 
-#XFLD: 
-referenceDocumentNumber=Numero conferma
- 
-#XTXT: 
 METASUP=Metasupplier
- 
-#XFLD: 
-Status=Stati
- 
-#XTXT: 
-titleMatnr=Ricerca Materiale
- 
-#XTIT: 
-KDATB=Data Inizio
- 
-#XTIT: 
-KDATE=Data Fine
-
-#XTIT:
-PRIMO_PERIODO=% Confermato
-
-#XTIT:
-SECONDO_PERIODO=Totale Periodo
-
-#XTIT:
-PROG_RICHIESTO=Progressivo Richiesto
-
-#XTIT:
-PROG_CONFERMA=Progressivo Conferma
-
-#XTIT:
-QTA_CONFERMA=Quantit\u00E0 Confermata
-
-#XTIT:
-ZENTRATA=Progressivo Ricevuto
-
-#XTIT:
-KTMNG=Quantit\u00E0 tot. ordine
-
-#XTXT: 
-CAT_CONS=Categoria consegna
 
 #XTXT: 
 DAYS=Giorni
+
+#XTXT: 
+DESC_METAID=Metafornitore
+
+#XTXT: 
+NAME_LIFNR=Ragione Sociale Fornitore
+
+#XTXT: 
+COMP_MATNR=Componente
+
+#XTXT: 
+DESC_COMP=Descrizione componente
+
+#XTXT:
+LBINS=Giacenza CQ 
+
+#XTXT:
+LBLAB=Giacenza Utilizzabile
+
+#XTXT:
+TOT_GIAC=Giacenza Disponibile
+
+#XTXT:
+FIRST=Prima data Consegna
+
+#XTXT:
+MATNR=Codice Prodotto
+
+#XTXT:
+DESC_MATNR=Descrizione Prodotto
 
 #XFLD: 
 ERR_Schedulations_empty=Attenzione: inserire almeno una schedulazione per la posizione {0}
@@ -426,12 +111,12 @@ FROZEN=Periodo congelato
 
 NUMINTCONF=Num int conf
 
-statusL=Basso 
+statusL=Non critico
 statusML=Medio Basso
 statusM=Medio 
 statusMH=Medio Alto
-statusH=Alto
-statusColorTitle=Stato critico ordini
+statusH=Critico
+statusColorTitle=Stato critico
 RangeDataSchedulazione=Data schedulazione
 RangeDataInserimento=Data ins. conf./variaz. prez.
 Documents = Documenti
@@ -454,7 +139,7 @@ DataInserimentoConferma=Data Inserimento Conferma
 PrezzoAttuale=Prezzo Attuale
 UdPAttuale=UdP attuale
 DataInizio=Data Inizio
-DataFine=Data Fine
+DataFine=Data Fine0
 ConfermePrezzoPos=Conferme prezzo
 Prezzo=Prezzo
 Quantita=Quantita
@@ -463,3 +148,4 @@ approvata=approvata
 rifiutata=rifiutata
 automatica=Automatica
 skippata=Appr. sistema
+Legend=Legenda
